--- a/Ex02.md
+++ b/Ex02.md
@@ -1,7 +1,7 @@
 # Ex. No : 2	
 # GENERATION OF LEXICAL TOKENS LEX/FLEX TOOL
 ## Register Number : 212222100049
-## Date : 
+## Date : 31.8.24
 
 ## AIM   
 To write a lex program to implement lexical analyzer to recognize a few patterns.
